# ReplayRail

./: .dockerignore  .gitignore  ACTION_PLAN_ReplayRail.md  AGENTS.md  CHANGELOG.md  Dockerfile.test  LICENSE  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
AGENTS.d/workflows/: CreateCommit.md  GenerateProjectReport.md
docs/: idempotency.md  reliable-publishing.md
examples/: fastapi_app.py  outbox_conceptual.py
src/replayrail/: __init__.py  config.py  errors.py  events.py  rail.py  serializers.py  store.py
src/replayrail/integrations/: __init__.py  fastapi.py
src/replayrail/stores/: __init__.py  memory.py  redis.py
tests/: test_errors.py  test_events.py  test_fastapi_integration.py  test_memory_store.py  test_rail.py  test_readme_contract.py  test_redis_store.py  test_serializers.py
